--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -836,7 +836,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\linewidth]{./../../../../Downloads/sysdesign.pdf}
+	\includegraphics[width=\linewidth]{./diagrams/sysdesign.pdf}
 \end{figure}
 
 % \begin{figure}[!htbp]
