--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -108,6 +108,8 @@ Le regioni del Nord Italia sembrano essere state le preferite per visite giornal
 \texttt{6200}), seguite immediatamente da quelle del centro-Sud. Il Molise, invece, non risulta aver raggiunto
 la minima cifra considerata nella raccolta dati.\\
 
+\subsection{Valutazione dell'usabilità a priori}
+
 \subsection{Definizione delle personas}
 
 \section{Documento dei Requisiti Software}
@@ -188,8 +190,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		tramite file in formato standard GPX.                                                                                                            \\
 		\hline
 	\end{tabular}
-	\caption{RF.4}
-	\label{table:4}
+	\caption{RF.5}
+	\label{table:5}
 \end{table}
 
 \begin{table}[H]
@@ -203,8 +205,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		per area geografica, per livello di difficoltà, per durata, e per accessibilità ai disabili.                                                                                           \\
 		\hline
 	\end{tabular}
-	\caption{RF.5}
-	\label{table:5}
+	\caption{RF.6}
+	\label{table:6}
 \end{table}
 
 \begin{table}[H]
@@ -220,8 +222,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		delle difficoltà/dei tempi indicati.                                                                                            \\
 		\hline
 	\end{tabular}
-	\caption{RF.6}
-	\label{table:6}
+	\caption{RF.7}
+	\label{table:7}
 \end{table}
 
 \begin{table}[H]
@@ -235,8 +237,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		nelle proprie compilation personalizzate.                                                            \\
 		\hline
 	\end{tabular}
-	\caption{RF.7}
-	\label{table:7}
+	\caption{RF.8}
+	\label{table:8}
 \end{table}
 
 \begin{table}[H]
@@ -250,8 +252,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		le quali informazioni potrebbero non essere corrette e/o aggiornate.                                      \\
 		\hline
 	\end{tabular}
-	\caption{RF.8}
-	\label{table:8}
+	\caption{RF.9}
+	\label{table:9}
 \end{table}
 
 \begin{table}[H]
@@ -265,8 +267,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		è l'autore.                                                                                             \\
 		\hline
 	\end{tabular}
-	\caption{RF.9}
-	\label{table:9}
+	\caption{RF.10}
+	\label{table:10}
 \end{table}
 
 \subsubsection{Interazione con un post}
@@ -281,8 +283,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		i dettagli di un post.                                                                    \\
 		\hline
 	\end{tabular}
-	\caption{RF.10}
-	\label{table:10}
+	\caption{RF.11}
+	\label{table:11}
 \end{table}
 
 \begin{table}[H]
@@ -296,8 +298,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		caratterizzato da foto (max 5), una descrizione (opzionale) e un itinerario associato.     \\
 		\hline
 	\end{tabular}
-	\caption{RF.11}
-	\label{table:11}
+	\caption{RF.12}
+	\label{table:12}
 \end{table}
 
 
@@ -312,8 +314,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		inappropriate.                                                                                          \\
 		\hline
 	\end{tabular}
-	\caption{RF.12}
-	\label{table:12}
+	\caption{RF.13}
+	\label{table:13}
 \end{table}
 
 \begin{table}[H]
@@ -327,8 +329,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		è l'autore.                                                                                  \\
 		\hline
 	\end{tabular}
-	\caption{RF.13}
-	\label{table:13}
+	\caption{RF.14}
+	\label{table:14}
 \end{table}
 
 \subsubsection{Gestione dati personali e conversazioni private}
@@ -343,8 +345,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		egli potrà visitare i contenuti inseriti ed eliminarli. Inoltre potrà cambiare la foto profilo.  \\
 		\hline
 	\end{tabular}
-	\caption{RF.14}
-	\label{table:14}
+	\caption{RF.15}
+	\label{table:15}
 \end{table}
 
 \begin{table}[H]
@@ -358,8 +360,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		È possibile avviare la conversazione a partire dai contenuti pubblicati. Inoltre è possibile ricercare un destinatario.         \\
 		\hline
 	\end{tabular}
-	\caption{RF.19}
-	\label{table:19}
+	\caption{RF.16}
+	\label{table:16}
 \end{table}
 
 \subsubsection{Interazione con una compilation}
@@ -374,8 +376,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		caratterizzate da un titolo e da una descrizione.                                                                               \\
 		\hline
 	\end{tabular}
-	\caption{RF.16}
-	\label{table:16}
+	\caption{RF.17}
+	\label{table:17}
 \end{table}
 
 \begin{table}[H]
@@ -389,8 +391,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		compilation personalizzate                                                                         \\
 		\hline
 	\end{tabular}
-	\caption{RF.17}
-	\label{table:17}
+	\caption{RF.18}
+	\label{table:18}
 \end{table}
 
 \begin{table}[H]
@@ -404,8 +406,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		delle proprie compilation.                                                                                  \\
 		\hline
 	\end{tabular}
-	\caption{RF.15}
-	\label{table:15}
+	\caption{RF.19}
+	\label{table:19}
 \end{table}
 
 
@@ -420,8 +422,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		che compongono le proprie compilation personalizzate                                                                \\
 		\hline
 	\end{tabular}
-	\caption{RF.18}
-	\label{table:18}
+	\caption{RF.20}
+	\label{table:20}
 \end{table}
 
 \subsubsection{Requisiti amministratore}
@@ -436,8 +438,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		la lista di segnalazioni inviate.                                                                                                  \\
 		\hline
 	\end{tabular}
-	\caption{RF.20}
-	\label{table:20}
+	\caption{RF.21}
+	\label{table:21}
 \end{table}
 
 \begin{table}[H]
@@ -451,8 +453,8 @@ In questa sezione saranno esposti i requisiti \textit{funzionali} dell'applicazi
 		rimuovere un itinerario segnalato.                                                                                               \\
 		\hline
 	\end{tabular}
-	\caption{RF.21}
-	\label{table:21}
+	\caption{RF.22}
+	\label{table:22}
 \end{table}
 
 \subsection{Requisiti non funzionali}
@@ -470,7 +472,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\hline
 	\end{tabular}
 	\caption{RNF1}
-	\label{table:21}
+	\label{table:22}
 \end{table}
 
 \begin{table}[H]
@@ -485,7 +487,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\hline
 	\end{tabular}
 	\caption{RNF2}
-	\label{table:22}
+	\label{table:24}
 \end{table}
 
 
@@ -501,7 +503,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\hline
 	\end{tabular}
 	\caption{RNF3}
-	\label{table:23}
+	\label{table:25}
 \end{table}
 
 \begin{table}[H]
@@ -515,7 +517,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\hline
 	\end{tabular}
 	\caption{RNF4}
-	\label{table:24}
+	\label{table:26}
 \end{table}
 
 \begin{table}[H]
@@ -529,7 +531,7 @@ Questa sezione conterrà invece i requisiti \textit{non funzionali} dell'applica
 		\hline
 	\end{tabular}
 	\caption{RNF5}
-	\label{table:25}
+	\label{table:27}
 \end{table}
 
 \newpage
@@ -550,7 +552,7 @@ deve attenersi. \\
 		\hline
 	\end{tabular}
 	\caption{RD1}
-	\label{table:26}
+	\label{table:28}
 \end{table}
 
 \begin{table}[H]
@@ -565,7 +567,7 @@ deve attenersi. \\
 		\hline
 	\end{tabular}
 	\caption{RD2}
-	\label{table:27}
+	\label{table:29}
 \end{table}
 
 \newpage
@@ -755,7 +757,6 @@ Sono presentate in questa sezione le tabelle di Cockburn relative a due casi d'u
 \end{tabularx}
 
 \newpage
-
 \subsection{Mock-Up dell'applicazione}
 Vengono ora mostrati i Mock-Up dei casi d'uso significativi dettagliati nella sottosezione precedente.\\
 Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente.
@@ -833,16 +834,6 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 % 	\caption{Registrazione utente}
 % \end{figure}
 % \FloatBarrier
-
-\begin{figure}[!htbp]
-	\centering
-	\includegraphics[width=\linewidth]{./diagrams/sysdesign.pdf}
-\end{figure}
-
-% \begin{figure}[!htbp]
-% 	\centering
-% 	\includesvg[width=\linewidth]{./../../../../Downloads/Apache_Tomcat_logo.svg}
-% \end{figure}
 
 \newpage
 \subsubsection{Interazione con un itinerario}
@@ -978,5 +969,30 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 
 \newpage
 \section{Documento di Design del sistema}
+\subsection{Analisi dell'architettura e criteri di design}
+
+\begin{figure}[!htbp]
+	\centering
+	 \includepdf[pages=1]{./diagrams/sysdesign.pdf}
+\end{figure}
+
+% \begin{figure}[!htbp]
+% 	\centering
+% 	\includesvg[width=\linewidth]{./../../../../Downloads/Apache_Tomcat_logo.svg}
+% \end{figure}
+
+\newpage
+\subsection{Diagramma delle classi di design}
+
+\newpage
+\subsection{Diagrammi di sequenza di design}
+Sono di seguito presentati i diagrammi di sequenza di design per due casi d'uso significativi.
+
+\newpage
+\subsection{Definizione delle gerarchie funzionali}
+
+\newpage
+\section{Definizione di un piano di testing e valutazione sul campo dell'usabilità}
+
 
 \end{document}
