--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -818,8 +818,8 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \subsection{Diagrammi di attività}
 
+\subsubsection{Autenticazione}
 \begin{figure}[!htbp]
-	\subsubsection{Login}
 	\centering
 	\includegraphics[width=\textwidth, page=1]{./diagrams/activity.pdf}
 	\caption{Login utente}
@@ -827,7 +827,6 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \FloatBarrier
 
 \newpage
-\subsubsection{Registrazione}
 % \begin{figure}[!htbp]
 % 	\centering
 % 	\includegraphics[width=\textwidth, page=3]{./diagrams/activity.pdf}
@@ -835,19 +834,36 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 % \end{figure}
 % \FloatBarrier
 
-\newpage
-\subsubsection{Interazione con un itinerario}
+% \newpage
 % \begin{figure}[!htbp]
 % 	\centering
-% 	\includegraphics[width=\textwidth, page=17]{./diagrams/activity.pdf}
-% 	\caption{Aggiunta itinerario}
+% 	\includegraphics[width=\textwidth, page=9]{./diagrams/activity.pdf}
+% 	\caption{Modifica password}
 % \end{figure}
 % \FloatBarrier
 
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=10]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=16]{./diagrams/activity.pdf}
+	\caption{Logout}
+\end{figure}
+\FloatBarrier
+
+
+\newpage
+\subsubsection{Interazione con un itinerario}
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth]{./diagrams/activity-Aggiungiitinerario.drawio.svg}
+	\caption{Aggiunta itinerario}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=9]{./diagrams/activity.pdf}
 	\caption{Rimozione itinerario}
 \end{figure}
 \FloatBarrier
@@ -863,7 +879,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=11]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=10]{./diagrams/activity.pdf}
 	\caption{Valutazione itinerario}
 \end{figure}
 \FloatBarrier
@@ -871,7 +887,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=12]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=11]{./diagrams/activity.pdf}
 	\caption{Salvataggio itinerario}
 \end{figure}
 \FloatBarrier
@@ -879,7 +895,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=13]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=12]{./diagrams/activity.pdf}
 	\caption{Segnalazione itinerario}
 \end{figure}
 \FloatBarrier
@@ -888,7 +904,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \subsubsection{Interazione con un post}
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=4]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=3]{./diagrams/activity.pdf}
 	\caption{Aggiunta post}
 \end{figure}
 \FloatBarrier
@@ -896,7 +912,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=5]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=4]{./diagrams/activity.pdf}
 	\caption{Rimozione post}
 \end{figure}
 \FloatBarrier
@@ -904,15 +920,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=2]{./diagrams/activity.pdf}
-	\caption{Ricerca itinerario}
-\end{figure}
-\FloatBarrier
-
-\newpage
-\begin{figure}[!htbp]
-	\centering
-	\includegraphics[width=\textwidth, page=15]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=14]{./diagrams/activity.pdf}
 	\caption{Segnalazione post}
 \end{figure}
 \FloatBarrier
@@ -921,7 +929,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \subsubsection{Interazione con una compilation}
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=8]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=7]{./diagrams/activity.pdf}
 	\caption{Aggiunta compilation}
 \end{figure}
 \FloatBarrier
@@ -929,7 +937,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=7]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=9]{./diagrams/activity.pdf}
 	\caption{Rimozione compilation}
 \end{figure}
 \FloatBarrier
@@ -937,7 +945,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=9]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=8]{./diagrams/activity.pdf}
 	\caption{Rimozione itinerario da compilation}
 \end{figure}
 \FloatBarrier
@@ -951,21 +959,46 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \end{figure}
 \FloatBarrier
 
-\newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=14]{./diagrams/activity.pdf}
-	\caption{Avvio conversazione con l'autore di un post}
+	\includegraphics[width=\textwidth, page=17]{./diagrams/activity.pdf}
+	\caption{Ricerca destinatario messaggio}
 \end{figure}
 \FloatBarrier
 
 \newpage
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=6]{./diagrams/activity.pdf}
+	\includegraphics[width=\textwidth, page=15]{./diagrams/activity.pdf}
+	\caption{Avvio conversazione con l'autore di un post o itinerario}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=5]{./diagrams/activity.pdf}
 	\caption{Modifica foto profilo}
 \end{figure}
 \FloatBarrier
+
+\newpage
+\subsubsection {Funzionalità riservate agli amministratori}
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=18]{./diagrams/activity.pdf}
+	\caption{Rimozione segnalazione}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=19]{./diagrams/activity.pdf}
+	\caption{Modifica itinerario}
+\end{figure}
+\FloatBarrier
+
 
 \newpage
 \section{Documento di Design del sistema}
