--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -827,20 +827,20 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \FloatBarrier
 
 \newpage
-% \begin{figure}[!htbp]
-% 	\centering
-% 	\includegraphics[width=\textwidth, page=3]{./diagrams/activity.pdf}
-% 	\caption{Registrazione utente}
-% \end{figure}
-% \FloatBarrier
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/activity-registrazione.svg}
+	\caption{Registrazione utente}
+\end{figure}
+\FloatBarrier
 
-% \newpage
-% \begin{figure}[!htbp]
-% 	\centering
-% 	\includegraphics[width=\textwidth, page=9]{./diagrams/activity.pdf}
-% 	\caption{Modifica password}
-% \end{figure}
-% \FloatBarrier
+\newpage
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/activity-forgot_password.svg}
+	\caption{Reset password dimenticata}
+\end{figure}
+\FloatBarrier
 
 \newpage
 \begin{figure}[!htbp]
@@ -855,7 +855,7 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \subsubsection{Interazione con un itinerario}
 \begin{figure}[!htbp]
 	\centering
-	\includesvg[width=\textwidth]{./diagrams/activity-Aggiungiitinerario.drawio.svg}
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/activity_aggiungi_itinerario.svg}
 	\caption{Aggiunta itinerario}
 \end{figure}
 \FloatBarrier
@@ -1008,11 +1008,6 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 	\centering
 	 \includepdf[pages=1]{./diagrams/sysdesign.pdf}
 \end{figure}
-
-% \begin{figure}[!htbp]
-% 	\centering
-% 	\includesvg[width=\linewidth]{./../../../../Downloads/Apache_Tomcat_logo.svg}
-% \end{figure}
 
 \newpage
 \subsection{Diagramma delle classi di design}
