--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -587,11 +587,20 @@ tra loro in packages.
 \FloatBarrier
 
 \newpage
+\subsubsection{Autenticazione}
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=2]{./diagrams/useCase.pdf}
+	\caption{Package 1 - Autenticazione}
+\end{figure}
+\FloatBarrier
+
+\newpage
 \subsubsection{Interazione con un itinerario}
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth, page=3]{./diagrams/useCase.pdf}
-	\caption{Package 1 - Interazione con un Itinerario}
+	\caption{Package 2 - Interazione con un itinerario}
 \end{figure}
 \FloatBarrier
 
@@ -600,7 +609,7 @@ tra loro in packages.
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth, page=4]{./diagrams/useCase.pdf}
-	\caption{Package 2 - Interazione con un Post}
+	\caption{Package 3 - Interazione con un post}
 \end{figure}
 \FloatBarrier
 
@@ -609,7 +618,7 @@ tra loro in packages.
 \begin{figure}[!htbp]
 	\centering
 	\includegraphics[width=\textwidth, page=5]{./diagrams/useCase.pdf}
-	\caption{Package 3 - Gestione Profilo}
+	\caption{Package 4 - Gestione profilo}
 \end{figure}
 \FloatBarrier
 
@@ -617,8 +626,17 @@ tra loro in packages.
 \subsubsection{Gestione messaggi}
 \begin{figure}[!htbp]
 	\centering
-	\includegraphics[width=\textwidth, page=2]{./diagrams/useCase.pdf}
-	\caption{Package 4 - Gestione messaggi}
+	\includegraphics[width=\textwidth, page=6]{./diagrams/useCase.pdf}
+	\caption{Package 5 - Gestione messaggi}
+\end{figure}
+\FloatBarrier
+
+\newpage
+\subsubsection{Funzionalità amministratore}
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[width=\textwidth, page=7]{./diagrams/useCase.pdf}
+	\caption{Package 6 - Funzionalità amministratore}
 \end{figure}
 \FloatBarrier
 
