Aggiunti diagram di design autenticazione

--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -1030,6 +1030,13 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \newpage
 \subsection{Diagramma delle classi di design}
 
+\subsubsection{Autenticazione}
+\begin{figure}[!htbp]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/design/login.svg}
+	\caption{Login e Login con social}
+\end{figure}
+
 \newpage
 \subsection{Diagrammi di sequenza di design}
 Sono di seguito presentati i diagrammi di sequenza di design per due casi d'uso significativi.
